Home , about us contact us pages addded

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -10,9 +10,14 @@
 }
 .navigation-menu li a{
     text-decoration: none;
-    color:white;
+    color:rgb(0, 0, 0);
 } 
 
+.active{
+    color:white !important;
+    font-weight: bold !important; 
+
+}
 
 /* mobile navigation menu */
 
@@ -28,3 +33,4 @@
     font-size: 1.4rem;
     color:black;
 }
+
