--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -14,10 +14,27 @@
 } 
 
 .active{
-    color:white !important;
+    color:blue !important;
     font-weight: bold !important; 
-
+    border-bottom: 3.5px solid blue;
 }
+
+  .navigation-menu a::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background-color: blue;
+    margin: auto;
+    display: block;
+  }
+  .navigation-menu a:hover::after{
+    width: 100%;
+    transition: width 0.3s linear;
+  }
+  .navigation-menu a:hover{
+    color: blue;
+  }
+
 
 /* mobile navigation menu */
 
